--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
 To do:
-  start with strategies, make sure each works
-  move onto learning algs
-  finally fix simulation
+  start with strategies, make sure each works x
+  move onto learning algs x
+  finally fix simulation x
   
